@@ -1,3 +1,9 @@
+2006-05-05  Johan Bilien <johan.bilien@nokia.com>
+
+	* hildon-navigator/others-menu.c: Dnotify signal handlers now only
+	  creates a timeout of 1s, after which the menu is updated
+	  (Closes N#28658)
+
 2006-05-03  Johan Bilien <johan.bilien@nokia.com>
 
 	* hildon-navigator/*.c: Removed deprecated low memory notifications
